# Muppet-Express

./: MuppetExpressExample.cpp  MuppetExpressShowcase.cpp  README.md  build.sh  fetchPokemonImages.sh
MuppetExpress/: .gitignore  MuppetExpress.sln
MuppetExpress/MuppetExpress/: CMakeLists.txt  Definitions.hpp  IdTraits.hpp  MiddlewareManager.hpp  MuppetExpress.cpp  MuppetExpress.vcxproj  MuppetExpress.vcxproj.filters  MuppetExpressDefinitions.hpp  PersonModel.hpp  PmrDatastore.hpp  PokemonLiteral.hpp  PokemonModel.hpp  Request.hpp  RestController.hpp  Router.hpp  Server.hpp  Showcase.cpp  StaticFileMiddleware.hpp  StatsResourse.hpp
MuppetExpress/MuppetExpress/.oldwwwroot/: index.html  styles.css
MuppetExpress/MuppetExpress/wwwroot/: about.html  index.html  pokemon.html
MuppetExpress/MuppetExpress/wwwroot/_app/: version.json
MuppetExpress/MuppetExpress/wwwroot/_app/immutable/assets/: 0.BA0pOvfq.css  0.DWfPYbtL.css  0.Z27XjlPA.css  2.BADKiLor.css  2.CnS1cr6S.css  Icon.BIaSm-mh.css  _layout.CTW1I-9F.css  _layout.D1OI6QXO.css  _layout.D3rcM2TN.css  _page.BeUbQd50.css
MuppetExpress/MuppetExpress/wwwroot/_app/immutable/chunks/: Icon.BKMukHSk.js  Icon.CrrC9Zrc.js  disclose-version.B-6HA6Dn.js  disclose-version.CeDJfB-k.js  entry.BKimlptV.js  entry.Cn2LZ7ML.js  entry.DC5CqmTW.js  entry.YF6Q0A1J.js  index-client.9nHFwg_t.js  index-client.sqKlkaDH.js  index.CdhEgdm0.js  index.CtLX__R6.js  input.BFGgkzsG.js  legacy.CnTdVqUu.js  legacy.r9OWb04V.js  preload-helper.DruTbtUk.js  preload-helper.uvg6QepT.js  props.B6qMwV2A.js  props.BnARJ_gJ.js  scheduler.BEmc_nj0.js
(+51 files in other folders)
